tests/baselines/reference/ClassDeclaration15.errors.txt
==== tests/cases/compiler/ClassDeclaration15.ts (1 errors) ====
    class C {
       foo();
       constructor() { }
       ~~~~~~~~~~~
!!! ClassDeclaration15.ts(3,4): error TS2238: Function implementation expected.
    }